Bluegreen/contoso-svc.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-website
  namespace: test-infra
spec:
  type: ClusterIP
  selector:
    app: contoso-website
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: http # Port to forward to in the POD
