Bluegreen/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: traffic-split-route
  namespace: test-infra
spec:
  parentRefs:
  - name: gateway-01
  rules:
  - backendRefs:
    - name: app1-service   #name of service for app1
      port: 80
      weight: 50
    - name: app2-service   #name of service for app2
      port: 80
      weight: 50
